6.63_03
    New Features
    * Added TEST_REQUIRES keyword to specify prerequisites only needed
      for testing.  [github 29] (Ricardo Signes)

    Bug Fixes
    * Update bundled modules: ExtUtils::Install to 1.54, ExtUtils::Manifest
      to 1.60.

    Misc
    * Change 'Note' to 'Warning' when libraries aren't found since people
      often fail to realise that this is the cause of a build failure.
      [github 20] (Matt Trout)

    Test Fixes
    * Added an early test to check for a common 5.6 bug where 0.01 is
      incorrectly stringified to 1.e-02.  [rt.cpan.org 74095]

    Doc Fixes
    * Clarified NAME. [rt.cpan.org 73361]
    * SYNOPSIS is a bit more useful.


6.63_02  Tue Nov  1 17:02:40 PDT 2011
    Test Fixes
    * Inform BSDPAN (on FreeBSD) to not register modules installed while
      testing. [rt.cpan.org 70232]
    * Fix t/echo.t test on Win32. [rt.cpan.org 72097]
    * Fix t/echo.t test on VMS. (Craig A. Berry)
    * Fix t/Win32.t to handle the change to init_others(). [rt.cpan.org 72096]

    Bug Fixes
    * Fix VMS's echo() for the interface changes. (Craig A. Berry)
    * Fix VMS's dollar sign escaping. (Craig A. Berry)

    Misc
    * my::bundle::copy_bundles() will only load File::Copy::Recursive if
      it needs it, allowing vendors packaging MakeMaker to just delete
      bundled/*
    * Bundling can be overridden by setting the BUILDING_AS_PACKAGE
      environment variable.  This makes life easier for vendor packagers.
    * Stripped the Windows newlines off Parse::CPAN::Meta to avoid
      confusing old versions of Module::Signature.

    Docs
    * README.packaging explains how to package MakeMaker
    * bundled/README explains what the bundled directory is about.
    

6.63_01  Sun Oct 23 16:57:24 PDT 2011
    Bug Fixes
    * Stray $ in the PPD and meta files (for example, from the ABSTRACT)
      are now escaped.  [rt.cpan.org 71847]

    Possibly incompatible changes
    * echo() now escapes all dollar signs by default
